# notmuch-python-bindings

./: README.md  pyproject.toml
notmuch/: version.py
