[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "notmuch"
version = "0.29.1"
license = "GPL-3.0"
authors=["Sebastian Spaeth <Sebastian@SSpaeth.de>", "Thore Weilbier <thore@weilbier.net>"]
description = "Python binding of the notmuch mail search and indexing library."
repository = "https://github.com/weilbith/notmuch-bindings.git"
packages = [
    { include = "notmuch" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
